# RootedShadow

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  default.nix  export_presets.cfg  flake.nix  project.godot
.github/workflows/: release-packaging.yml
.reuse/: dep5
addons/CSGExport/: csgexport.gd
addons/brush/: editor_brush_plugin.gd
addons/lod/: lod_cpu_particles.gd  lod_omni_light.gd  lod_particles.gd  (+2 more)
addons/native-impl/: Cargo.toml  Makefile.toml  native-impl.gdnlib  plugin.cfg
addons/native-impl/.cargo/: config.toml
addons/native-impl/icons/: bone.svg.import  divide.svg.import
addons/native-impl/native/: NativeIKSolver.gdns  NativeImplPlugin.gdns  NativeLODSpatial.gdns  NativeSplitMultimeshContainer.gdns
addons/native-impl/src/: lib.rs  plugin.rs
addons/native-impl/src/ik/: ik_solver.rs  mod.rs
addons/native-impl/src/lod/: lod_spatial.rs  mod.rs
addons/native-impl/src/scatter/: mod.rs  split_multimesh_container.rs
addons/native-impl/templates/: native.jinja2
addons/scatter-chunk/: Cargo.toml  Makefile.toml  plugin.cfg  scatter-chunk.gdnlib
addons/scatter-chunk/native/: ScatterChunkPlugin.gdns  SplitMultimeshContainer.gdns
addons/scatter-chunk/src/: chunk.rs  lib.rs  plugin.rs
addons/scatter-chunk/templates/: native.jinja2
assets/: PSX_NIGHTSKY.hdr.import  icon.png.import
docs/: design.md  note.md  roadmap.md
scenes/: main.tscn  psx_layer.tscn  test_pathfinding.tscn
scripts/: compass_indicator.gd  end.gd  interactable.gd  path_finder_body.gd  root_collider.gd
shaders/: checkerboard.shader
(+707 files in other folders)
