[package]
name = "native-impl"
version = "0.1.0"
authors = ["florianvazelle <ponythugflorian@gmail.com>"]
edition = "2021"
description = ""
license = "MIT"
keywords = ["gamedev", "godot", "godot-rust"]
categories = ["game-development"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.11.3"
interpolation = "0.2.0"

[build-dependencies]
askama = "0.11.1"
regex = "1.7.0"
